<resources>
    <string name="app_name">Berber Appointment</string>
    <string name="ShopName">Berber Keşan</string>
    //Login Page Design
    <string name="LoginText">Login Page</string>
    <string name="Back">Back</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Password">Password</string>
    <string name="LoginButton">Login</string>
    <string name="Account">I Do Not Have An Account</string>

    //Register Page Design
    <string name="RegisterText">Register Page</string>
    <string name="RegisterButton">Register</string>
    <string name="RegisterUserN">User Name</string>
    <string name="RegisterLastN">Last Name</string>
    <string name="RPassword">R-Password</string>

    //Create Berber Popup
    <string name="CreatePopupRE">Barber Registration</string>
    <string name="CreatePopupN">Berber Name</string>
    <string name="CreatePopupLN">Berber Last Name</string>
    <string name="CreatePopupPN">Phone Number</string>
    <string name="CreatePopupSN">Shop Name</string>
    <string name="CreatePopupSA">Shop Address</string>
    <string name="CreatePopupPS">Berber Password</string>
    <string name="CreateRegistration">Create Registration</string>

    //Create Berber
    <string name="ButtonDelete">Delete</string>
    <string name="ButtonUpdate">Update</string>

    //appointment pages
    <string name="ForAddress">For Address</string>

    //berber shop
    <string name="StartTime">Start Time(08.00)</string>
    <string name="EndTime">End Time(23.00)</string>
    <string name="CuttingTime">Cutting Time(Mn)</string>
    <string name="CreateAppointment">Create an Appointment</string>
    <string name="ThoseAppointment">Those who made an appointment</string>
    <string name="AppointmentScheduling">Appointment Scheduling</string>

    //berber list card
    <string name="Appointment">Appointment</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>