<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/createPopupCBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/baseline_close_24"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/createPopupRE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:text="@string/CreatePopupRE"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/CreatePopupN">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPopupN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/CreatePopupLN">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPopupLN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="text"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/PhoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPopupPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="11"
            android:textSize="20sp"
            android:inputType="phone"
            android:maxLength="11"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/CreatePopupSN">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPopupSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="20"
            android:textSize="20sp"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/CreatePopupSA">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPopupSA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="20"
            android:textSize="20sp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createPopupBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/CreateRegistration"
        android:textSize="20sp" />

</LinearLayout>