<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <TextView
            android:id="@+id/registerBackB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="349dp"
            android:text="@string/Back"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/ShopName"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/RegisterText"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/registerUserN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_people_alt_24"
                    android:ems="10"
                    android:hint="@string/RegisterUserN"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="15"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/registerLastN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_people_alt_24"
                    android:ems="10"
                    android:hint="@string/RegisterLastN"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="15"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/registerPhoneN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:ems="10"
                    android:hint="@string/PhoneNumber"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="11"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="15"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/registerRPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:ems="10"
                    android:hint="@string/RPassword"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="15"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/RegisterButton"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>