<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/ShopName"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/LoginText"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/loginPhoneN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:ems="10"
                    android:hint="@string/PhoneNumber"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="11"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="20"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/LoginButton"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/accountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:singleLine="false"
                    android:text="@string/Account"
                    android:textAlignment="center"
                    android:textColor="#FA0000"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>