<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".berber_shop.BerberShop">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/berberShopToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:subtitle="5231123123"
            app:title="Berber Saloon" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/berberName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_background"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/berberLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_background"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="25sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/berberShopAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/AppointmentScheduling"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/startTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/StartTime"
                            android:inputType="number|numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/endTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/EndTime"
                            android:inputType="number|numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cuttingTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/CuttingTime"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/createBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/CreateAppointment" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/ThoseAppointment"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>